--- a/untitled.html
+++ b/untitled.html
@@ -1,1 +1,1 @@
-<div class="placeholder-text">Double-click this text to start writing.</div>
+<div>I can write text and track <b>changes</b><br></div>
