--- a/div_This_convergence_of_warm__.html
+++ b/div_This_convergence_of_warm__.html
@@ -1,1 +1,13 @@
-<div>This convergence of warm air in the updraft, and this cool air, causes a rotating wall cloud to form. The RFD also focuses the mesocyclone's base, causing it to siphon air from a smaller and smaller area on the ground. As the updraft intensifies, it creates an area of low pressure at the surface. This pulls the focused mesocyclone down, in the form of a visible condensation funnel. As the funnel descends, the RFD also reaches the ground, creating a gust front that can cause severe damage a good distance from the tornado.<br></div>
+<div>This convergence of warm air in the updraft, and this cool air, causes a rotating wall cloud to form. The RFD also focuses the mesocyclone's base, causing it to siphon air from a smaller and smaller area on the ground. As the updraft intensifies, it creates an area of low pressure at the surface. This pulls the focused mesocyclone down, in the form of a visible condensation funnel. As the funnel descends, the RFD also reaches the ground, creating a gust front that can cause severe damage a good distance from the tornado.&nbsp;<cite class="squire-citation ltx_cite" data-bib-text="@article{Guszejnov_2016,
+	doi = {10.1093/mnras/stw315},
+	url = {http://dx.doi.org/10.1093/mnras/stw315},
+	year = 2016,
+	month = {feb},
+	publisher = {Oxford University Press ({OUP})},
+	volume = {458},
+	number = {1},
+	pages = {673--680},
+	author = {D{\'{a}}vid Guszejnov and Mark R. Krumholz and Philip F. Hopkins},
+	title = {The necessity of feedback physics in setting the peak of the initial mass function},
+	journal = {Mon. Not. R. Astron. Soc.}
+}" data-bib-key="Guszejnov_2016" contenteditable="false" style="cursor: pointer"><a class="au-cite-link" href="#Guszejnov_2016">Guszejnov 2016</a></cite><br></div>
